Alpha 6 - 9th August 2021

- !FIRE! Fires can now be started by rogue sparks and flames (which should be rare) and there's a new order to attempt to put out fires
- Hopefully fixed the music bug that was causing tracks to start playing despite volume being set to 0
- Added weather systems:
    - Rain
        - Dwarves will be upset at walking, working or sleeping in rain
        - Rain has a good chance of extinguishing any fires
        - Iron and steel items and furniture will eventually rust and be destroyed if exposed to rain for a very long period
        - Copper will develop a lovely green patina if left exposed to rain for a very long period
    - Snow and Cold winds
        - Doesn't upset dwarves, but might kill them from sleeping in it
        - Smaller chance to extinguish fires
        - Snow also applies rust like rain
    - Thunderstorms
        - Lightning strikes occur infrequently and may start fires
- The player now selects where they spawn when starting a new game
- Added new hair and beard assets for dwarves
- Reworked dwarven eyebrows as the colouring was slightly off
- Male dwarves are now only 40% likely to be bald (down from a whopping 70%)
- Fixed an issue with renaming zones (with thanks to Altreus for highlighting it)

Alpha 5.3 - 13th July 2021

- Added the roof construction mode, allowing the player where to designate where roofing should be added or removed
- Roofing can now be constructed outside, though there is no gameplay purpose yet until weather is added in Alpha 7
- Replaced "quad" wall construction with "room" which also queues up roofing
- Added happiness bonuses for working or sleeping in an enclosed room (surrounded by walls or doors and covered with roof)
- Added the ability to construct/replace flooring
- Flooring now has a speed modifier, constructed flooring is faster, most natural flooring is slower, some moreso (gravel)