@@ -10,7 +10,7 @@
   "definitions/designations.json" : 4569676354063990874,
   "definitions/entityAssets/entityAssetTypes.json" : 2551131625816160478,
   "definitions/entityAssets/furnitureEntityAssets.json" : 8208405044359271698,
-  "definitions/entityAssets/humanoidEntityAssets.json" : -6232081471737158557,
+  "definitions/entityAssets/humanoidEntityAssets.json" : -8280725156995747217,
   "definitions/entityAssets/itemEntityAssets.json" : 5012196945668507758,
   "definitions/entityAssets/plantEntityAssets.json" : -5295972566114544423,
   "definitions/entityAssets/renderLayers.json" : -1163552902139591673,
@@ -56,7 +56,7 @@
   "tilesets/gui.atlas" : 5121076913194362008,
   "tilesets/masks.atlas" : -7267469657370952532,
   "tilesets/terrain.atlas" : 8934810509538080591,
-  "translations/collated.csv" : 147220981712428129,
+  "translations/collated.csv" : -4693184085870155865,
   "translations/languages.json" : 8557385612734997329,
   "ui/cursors/*.png" : -5156863323457290688,
   "ui/fonts/*.ttf" : -7287232856992254877,
