@@ -327,9 +327,10 @@ GUI.LOAD_GAME.TABLE.GAME_TIME,World time,,Uhrzeit,,,,,,,,,,,,,,,,,
 GUI.LOAD_GAME.TABLE.SETTLEMENT_NAME,Name,,Name,,,,,,,,,,,,,,,,,
 GUI.LOAD_GAME.TABLE.VERSION,Version,,Version,,,,,,,,,,,,,,,,,
 GUI.LOAD_GAME.TITLE,Load Game,,Lade Spiel,,,,,,,,,,,,,,,,,
+GUI.MAP_SEED_DISPLAY,"Current map seed: ",,,,,,,,,,,,,,,,,,,
 GUI.MINIMAP.LABEL,Minimap,,Minikarte,Minimap,Minimap,Minimapa,Minimapa,,,Минимап,El Haritası,Minimap,,Minimap,,,,ミニマップ,最低限度,미니맵
 GUI.MUSIC_VOLUME,Music volume:,,Musiklautstärke:,Volume de la musique:,Volume della musica:,Volumen de la música:,Volume da música:,Volume da música:,,Громкость музыки:,Müzik seviyesi:,Musikvolumen:,,Musik volym:,,,,音楽ボリューム:,音乐音量：,음악 볼륨:
-GUI.NEW_VERSION_AVAILABLE,New version now available on Itch.io,,Neue Version jetzt auf itch.io verfügbar,Nouvelle version maintenant disponible sur Itch.io,Nuova versione ora disponibile su Itch.io,Nueva versión disponible en Itch.io,Nova versão agora disponível no ItC.io,,,Новая версия теперь доступна на Itch.io,Yeni versiyon Itch.io da.,Ny version nu tilgængelig på Itch.io,,Ny version nu tillgänglig på Itch.io,,,,新しいバージョンがItch.ioで利用可能になりました,新版本现已在 iTch.io 上推出,Itch.io에서 새 버전을 사용할 수 있습니다.
+GUI.NEW_VERSION_AVAILABLE,,,Neue Version jetzt auf itch.io verfügbar,Nouvelle version maintenant disponible sur Itch.io,Nuova versione ora disponibile su Itch.io,Nueva versión disponible en Itch.io,Nova versão agora disponível no ItC.io,,,Новая версия теперь доступна на Itch.io,Yeni versiyon Itch.io da.,Ny version nu tilgængelig på Itch.io,,Ny version nu tillgänglig på Itch.io,,,,新しいバージョンがItch.ioで利用可能になりました,新版本现已在 iTch.io 上推出,Itch.io에서 새 버전을 사용할 수 있습니다.
 GUI.NEXT_LABEL,Next,,Weiter,Suivant,Avanti,Seguir,Seguinte,Seguinte,,Далее,Sonraki,Næste,,Nästa,,,,次はね,下一个,다음
 GUI.NON_ROTATABLE_FURNITURE.HINT,This furniture can not be rotated in this version of the game,,Dieses Möbelstück kann in dieser Version des Spiels nicht rotiert werden.,Aucune rotation possible pour ce meuble dans cette version du jeu,Questo mobile non può essere ruotato in questa versione del gioco,Este mobiliario no se puede girar en esta versión del juego,Este mobiliário não pode ser girado nesta versão do jogo,,,Эта мебель не может быть повернута в этой версии игры,Oyunun bu versiyonunda mobilyalar döndürülemiyor.,Disse møbler kan ikke drejes i denne version af spillet,,Dessa möbler kan inte roteras i den här versionen av spelet,,,,この家具は、ゲームのこのバージョンで回転することはできません,这个家具不能在这个版本的游戏旋转,이 가구는 게임의이 버전에서 회전 할 수 없습니다
 GUI.OK_LABEL,Ok,,OK,OK,OK,Ok,OK,OK,,OK,Tamam,Ok,,OK,,,,OK,好,좋아
