@@ -331,7 +331,7 @@ GUI.OPTIONS.TAB.MISC,,Other,,,,,,,,,,,,,
 GUI.GRAPHICS.RESOLUTION,,Resolution,Résolution,Resolución,Auflösung,Risoluzione,Resolução,Resolução,Разрешение экрана,Rozdzielczość ,,,,,
 GUI.GRAPHICS.FULLSCREEN,,Fullscreen,Plein écran,Pantalla completa,Vollbild,Schermo intero,Tela cheia,Ecrã inteiro,Во весь экран,Pełny ekran ,,,,,
 GUI.MINIMAP.LABEL,,Minimap,,,,,,,,,,,,,
-GUI.NEW_VERSION_AVAILABLE,,New version now available on Itch.io,,,,,,,,,,,,,
+GUI.MAP_SEED_DISPLAY,,Current map seed: ,,,,,,,,,,,,,
 GUI.VIEW_ROADMAP,,View development roadmap,,,,,,,,,,,,,
 GUI.OPTIONS.GAMEPLAY.PAUSE_ON_NOTIFICATION,,Pause for notifications,,,,,,,,,,,,,
 GUI.OPTIONS.TWITCH.TITLE,,Twitch Integration,,,,,,,,,,,,,
