@@ -1,3 +1,8 @@
+Alpha 6.1 - 12th August 2021
+
+- Fix for crash from mushroom logs
+- Displaying map seed on main menu
+
 Alpha 6 - 9th August 2021
 
 - !FIRE! Fires can now be started by rogue sparks and flames (which should be rare) and there's a new order to attempt to put out fires
